...
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view_neighbour_avatar"
            app:layout_constraintStart_toStartOf="@+id/view_neighbour_avatar" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/neighbour_add_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="245dp"
            android:layout_marginEnd="16dp"
            app:backgroundTint="@color/light_gray"
            app:elevation="22dp"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/view_neighbour_name2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textColor="@color/neigh_title"
                    android:textSize="30sp"/>

...
